--- a/style.css
+++ b/style.css
@@ -35,6 +35,14 @@ section{
     margin: auto;
 }
 
+.favorites{
+    width: 100%
+}
+
+.favorites2{
+    width: 100%
+}
+
 .youtube {
     width: 100%;
 }
